cmake_minimum_required(VERSION 3.14)
project(projects_cpp_21days LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(lesson_1)
add_subdirectory(lesson_2)
add_subdirectory(lesson_3)
add_subdirectory(lesson_4)
add_subdirectory(lesson_5)
add_subdirectory(lesson_6)
add_subdirectory(lesson_7)
add_subdirectory(lesson_8)
add_subdirectory(lesson_9)
add_subdirectory(lesson_10)
add_subdirectory(lesson_11)
add_subdirectory(lesson_12)
add_subdirectory(lesson_13)
add_subdirectory(lesson_14)
add_subdirectory(lesson_15)
add_subdirectory(lesson_16)
add_subdirectory(lesson_17)
add_subdirectory(lesson_18)
add_subdirectory(lesson_19)
add_subdirectory(lesson_20)
add_subdirectory(lesson_21)
add_subdirectory(lesson_22)
