cmake_minimum_required(VERSION 3.14)
project(cpp_examples LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(arrays_and_pointers)
add_subdirectory(decision_making_and_cycles)
add_subdirectory(files)
add_subdirectory(functions)
add_subdirectory(lines)
add_subdirectory(server)
add_subdirectory(snake)
add_subdirectory(structures_and_associations)
