cmake_minimum_required(VERSION 3.14)
project(object_oriented_programming LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(msoftcon)
add_subdirectory(arrays)
add_subdirectory(base)
add_subdirectory(cards)
add_subdirectory(counter)
add_subdirectory(elevator)
add_subdirectory(engl_dist)
add_subdirectory(files)
add_subdirectory(landlord)
add_subdirectory(long_number)
add_subdirectory(persons)
add_subdirectory(stl)
add_subdirectory(string_class)
add_subdirectory(templates)
add_subdirectory(times)
add_subdirectory(hash_table)
add_subdirectory(contact_list)
