cmake_minimum_required(VERSION 3.14)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(array)
add_subdirectory(array_input)
add_subdirectory(linked_list)
add_subdirectory(matrix)
add_subdirectory(pointer_sort)
add_subdirectory(stack)
add_subdirectory(stack_calculator)
add_subdirectory(string_format)
