cmake_minimum_required(VERSION 3.14)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(copy_constructor)
add_subdirectory(horse)
add_subdirectory(interface)
add_subdirectory(object_ptr_sort)
add_subdirectory(show_primary)
add_subdirectory(static_field)
add_subdirectory(switch_case)
add_subdirectory(base_shape)
