cmake_minimum_required(VERSION 3.14)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(dist_add)
add_subdirectory(dist_check)
add_subdirectory(dist_constructor)
add_subdirectory(dist_conversion)
add_subdirectory(dist_input)
add_subdirectory(dist_operator)
add_subdirectory(dist_scale)
add_subdirectory(dist_sum)
