cmake_minimum_required(VERSION 3.14)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(binary_read)
add_subdirectory(char_read)
add_subdirectory(char_write)
add_subdirectory(employ_write)
add_subdirectory(line_read)
add_subdirectory(line_write)
add_subdirectory(open_error)
add_subdirectory(person_input_write)
add_subdirectory(person_read)
add_subdirectory(person_write)
add_subdirectory(person_write_func)
add_subdirectory(read_position)
add_subdirectory(string_read)
add_subdirectory(string_write)
add_subdirectory(write_error)
