cmake_minimum_required(VERSION 3.14)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(algorithm)
add_subdirectory(deque)
add_subdirectory(iterator)
add_subdirectory(stl_list)
add_subdirectory(map)
add_subdirectory(object_list)
add_subdirectory(object_set)
add_subdirectory(set)
add_subdirectory(vector)
