cmake_minimum_required(VERSION 3.14)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(char_count)
add_subdirectory(string_append)
add_subdirectory(string_constructor)
add_subdirectory(string_copy)
add_subdirectory(string_find)
add_subdirectory(string_memory)
add_subdirectory(string_object)
add_subdirectory(word_count)
